# carma_slicer_extension

./: CMRToolkitAutomaticLeftAtrialScar.cxx  CMRToolkitAutomaticLeftAtrialScar.xml  CMRToolkitAxialDilate.cxx  CMRToolkitAxialDilate.h  CMRToolkitAxialDilate.xml  CMRToolkitBooleanREMOVEFilter.cxx  CMRToolkitConnectedThresholdFilter.cxx  CMRToolkitConnectedThresholdFilter.xml  CMRToolkitInhomogeneityCorrection.cxx  CMRToolkitInhomogeneityCorrection.h  CMRToolkitIsolatedConnectedFilter.cxx  CMRToolkitPVAntrumCut.cxx  CMRToolkitPVAntrumCut.h  CMRToolkitRegistration.py  CMRToolkitRegistrationBRAINSFit.py  CMakeLists.txt  CarmaAutomaticLeftAtrialScar.cxx  CarmaAutomaticLeftAtrialScar.xml  CarmaAutomaticLeftAtrialScar.xml.in  CarmaAxialDilate.cxx  CarmaAxialDilate.h  CarmaAxialDilate.xml  CarmaBooleanREMOVE.cxx  CarmaBooleanREMOVE.xml  CarmaBooleanREMOVEFilter.cxx  CarmaBooleanREMOVEFilter.xml  CarmaConnectedThresholdFilter.cxx  CarmaConnectedThresholdFilter.xml  CarmaInhomogeneityCorrection.cxx  CarmaInhomogeneityCorrection.h  CarmaInhomogeneityCorrection.xml  CarmaInhomogeneityCorrection.xml.in  CarmaIsolatedConnectedFilter.cxx  CarmaIsolatedConnectedFilter.xml  CarmaPVAntrumCut.cxx  CarmaPVAntrumCut.h  CarmaPVAntrumCut.xml  CarmaRegistration.py  CarmaRegistrationBRAINSFit.py  ConnectedThresholdFilter.cpp  (+17 more)
CMRToolkitLASegmentationGraphCuts/: CMRToolkitLASegmentationGraphCuts.cxx  CMRToolkitLASegmentationGraphCuts.xml  CMakeLists.txt  ResampleVolume.cxx
CMRToolkitWizard/: CMRToolkitWizard.py  CMakeLists.txt
CMRToolkitWizard/Resources/: CMRToolkitWizardAntrumCutStep.py  CMRToolkitWizardAutoScarStep.py  CMRToolkitWizardAxialDilateStep.py  CMRToolkitWizardBooleanRemoveStep.py  CMRToolkitWizardEndoNVIsosurfaceStep.py  CMRToolkitWizardEndoSegmentationStep.py  CMRToolkitWizardSelectDataStep.py  CMRToolkitWizardStep.py  CMRToolkitWizardWallCleanupStep.py  Helper.py  __init__.py
CarmaLASegmentationGraphCuts/: CMakeLists.txt  CarmaLASegmentationGraphCuts.cxx  CarmaLASegmentationGraphCuts.xml  ResampleVolume.h  maxflow.cpp
Data/Baseline/: CarmaAutomaticLeftAtrialScarTest.nrrd  CarmaAxialDilateTest.nrrd  CarmaInhomogeneityCorrectionTest.nrrd  CarmaPVAntrumCutTest.nrrd
Data/Input/: autoscar-data.nrrd  autoscar-endo.nrrd  autoscar-wall.nrrd  boolean-endo.nrrd  boolean-endodilate.nrrd  dilate-endo.nrrd  inhomogeneity-data.nrrd  inhomogeneity-roi.nrrd  shrinkwrap-endo.nrrd  shrinkwrap-wall.nrrd  wizard-endo.nrrd  wizard-epi.nrrd
HeartGraph_SlicerExtension/: CMakeLists.txt  graph.cpp  graph.h  mesh2graph2surfVnet.cxx  mesh2graph2surfVnet.xml  mesh2graph2surfVnetCLP.h
LASegmentationWorkflow/: CMakeLists.txt  LASegmentationWorkflow.py
LASegmentationWorkflow/LASegmentationResources/: LASegmentationWorkflowEndoSegmentationStep.py  LASegmentationWorkflowImageRegistrationStep.py  LASegmentationWorkflowSelectDataStep.py  LASegmentationWorkflowStep.py  __init__.py
Testing/: CMakeLists.txt
Testing/Cxx/: CMRToolkitBooleanREMOVEFilterTest.cxx  CMakeLists.txt  CarmaConnectedThresholdFilterTest.cxx  ConnectedThresholdFilterTest.cpp
Testing/Python/: CMakeLists.txt  CardiacMRIToolkitSelfTest.py
